# Gradience

./: .all-contributorsrc  .deepsource.toml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .typos.toml  0001-fix-Use-different-variables-for-display-name-and-fil.patch  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  HACKING.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  com.github.AdwCustomizerTeam.AdwCustomizer.Devel.json  com.github.AdwCustomizerTeam.AdwCustomizer.json  com.github.ArtyIF.AdwCustomizer.json  com.github.ArtyIF.AdwCustomizer.json~  com.github.GradienceTeam.Gradience.Devel.json  com.github.GradienceTeam.Gradience.json  flake.nix  gradience.doap  local.sh  local_cli.sh  meson.build  pylintrc  pypi-dependencies.json  requirements.txt  tags.Ba8CVD  transifex.yml
data/: com.github.AdwCustomizerTeam.AdwCustomizer.Devel.desktop.in  com.github.AdwCustomizerTeam.AdwCustomizer.appdata.xml.in  com.github.AdwCustomizerTeam.AdwCustomizer.appdata.xml.in.in  com.github.AdwCustomizerTeam.AdwCustomizer.desktop.in  com.github.AdwCustomizerTeam.AdwCustomizer.desktop.in.in  com.github.AdwCustomizerTeam.AdwCustomizer.gschema.xml  com.github.AdwCustomizerTeam.AdwCustomizer.gschema.xml.in  com.github.ArtyIF.AdwCustomizer.appdata.xml.in  com.github.ArtyIF.AdwCustomizer.desktop.in  com.github.ArtyIF.AdwCustomizer.gschema.xml  com.github.GradienceTeam.Gradience.appdata.xml.in.in  com.github.GradienceTeam.Gradience.desktop.in.in  com.github.GradienceTeam.Gradience.gschema.xml.in  gradience.gresource.xml  meson.build  style.css
data/icons/: meson.build
data/plugins/: firefox_gnome_theme.py  firefox_gnome_theme.yapsy-plugin  mailspring.py  mailspring.yapsy-plugin  meson.build  qt5ct.py  qt5ct.yapsy-plugin
data/presets/: adwaita-dark.json  adwaita.json  pretty-purple.json
data/shell/: meson.build
data/theme/: README.md  meson.build
data/theme/42/: meson.build
data/theme/43/: meson.build
data/ui/: app_type_dialog.blp  builtin_preset_row.blp  custom_css_group.blp  error.blp  error_list_row.blp  explore_preset_row.blp  help_overlay.blp  log_out_dialog.blp  meson.build  monet_theming_group.blp  no_plugin_pref.blp  no_plugin_window.blp  option.blp  option_row.blp  palette_shades.blp  plugin_row.blp  preferences.blp  preferences_window.blp  preset_row.blp  presets_manager_window.blp  repo_row.blp  reset_preset_group.blp  save_dialog.blp  share_window.blp  shell_prefs_window.blp  shell_theming_group.blp  theming_empty.blp  theming_empty_group.blp  welcome.blp  welcome_window.blp  window.blp
gradience/: README.md  Structure.md  about.py  app_type_dialog.py  builtin_preset_row.py  cli.py  constants.py.in  custom_css_group.py  explore_preset_row.py  gradience.in  main.py  meson.build  no_plugin_pref.py  option.py  palette_shades.py  plugin.py  plugin_row.py  plugins_list.py  preferences.py  preset_row.py  presets_manager_window.py  setting.py  settings_schema.py  share_window.py  tags.0sSC58  tags.BHgZo2  tags.BqJqJQ  tags.ChZE1L  tags.CiXfRU  tags.G6v47y  tags.JabtKh  tags.Q95X67  tags.VGe67P  tags.XXswQH  tags.tCYaLH  tags.tlo1os  tags.zBhXPC  welcome.py  window.py
gradience/backend/: constants.py.in  css_parser.py  exceptions.py  flatpak_overrides.py  globals.py  logger.py  meson.build  preset_downloader.py  struct.md
gradience/backend/models/: meson.build  preset.py  repo.py  shell.py
gradience/backend/theming/: meson.build  monet.py  preset.py  preset_utils.py  shell.py
gradience/backend/utils/: colors.py  common.py  flatpak_gsettings.py  gnome.py  gsettings.py  meson.build  networking.py  shell.py  subprocess.py  theming.py  utils.py
gradience/commands/: about.py  apply_preset.py  meson.build  monet.py  plugins.py  presets.py
gradience/frontend/: gradience.in  main.py  meson.build  settings_schema.py  struct.md
gradience/frontend/cli/: cli.in  meson.build
gradience/frontend/dialogs/: app_type_dialog.py  log_out_dialog.py  meson.build  no_plugin_window.py  save_dialog.py  unsupported_shell_dialog.py  unsupported_shell_version_dialog.py
gradience/frontend/schemas/: meson.build  preset_schema.py  shell_schema.py
gradience/frontend/utils/: actions.py  (+2 more)
gradience/modules/: README.md  css.py  custom_presets.py  exceptions.py  flatpak_overrides.py  manager.py  meson.build  preset.py  repo.py  run_async.py  shell.py  themes.py  utils.py
gradience/ui/: app_type_dialog.py  builtin_preset_row.py  custom_css_group.py  error.py  error_list_row.py  explore_preset_row.py  no_plugin_pref.py  no_plugin_window.py  option.py  option_row.py  palette_shades.py  plugin_row.py  preferences.py  preferences_window.py  preset_row.py  presets_manager_window.py  repo_row.py  share_window.py  welcome.py  welcome_window.py  window.py
gradience/utils/: README.md  __init__.py  css.py  custom_presets.py  flatpak_overrides.py  preset.py  preset_downloader.py  repo.py  run_async.py  shell.py  utils.py
src/: __init__.py  adwcustomizer.gresource.xml  adwcustomizer.in  app_type_dialog.py  builtin_preset_row.py  constants.py.in  custom_css_group.py  error.py  explore_preset_row.py  gradience.gresource.xml  gradience.in  info.py.in  main.py  meson.build  option.py  palette_shades.py  parsing_error.py  plugin.py  plugin_row.py  plugins_list.py  preferences.py  preset_row.py  presets_manager_window.py  preview.py  repo_row.py  run_async.py  setting.py  settings_schema.json  settings_schema.py  style.css  welcome.py  window.py
src/modules/: __init__.py  css.py  custom_presets.py  flatpak_overrides.py  run_async.py  utils.py
src/plugins/: __init__.py  gtk4.py  hookspec.py
src/presets/: adwaita-dark.json  adwaita.json  pretty-purple.json
src/ui/: app_type_dialog.blp  custom_css_group.blp  error.blp  explore_preset_row.blp  option.blp  palette_shades.blp  parsing_error.blp  plugin_row.blp  preset_row.blp  presets_manager_window.blp  preview.blp  welcome.blp  window.blp
subprojects/gnome-shell-sass/: COPYING  _colors.scss  _common.scss  _drawing.scss  _palette.scss  gnome-shell-high-contrast.scss  gnome-shell.scss  meson.build
(+212 files in other folders)
