application_id = 'com.github.AdwCustomizerTeam.AdwCustomizer'

scalable_dir = join_paths('hicolor', 'scalable', 'apps')
install_data(
  join_paths(scalable_dir, ('@0@.svg').format(APPLICATION_ID)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)
install_data(
  join_paths(scalable_dir, ('@0@.Devel.svg').format(APPLICATION_ID)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)

symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
install_data(
  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(APPLICATION_ID)),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)
