install_subdir('42',
  install_dir: join_paths(get_option('datadir'), 'gradience', 'shell'),
  exclude_files: 'meson.build',
  strip_directory : false
)

install_subdir('43',
  install_dir: join_paths(get_option('datadir'), 'gradience', 'shell'),
  exclude_files: 'meson.build',
  strip_directory : false
)

install_subdir('44',
  install_dir: join_paths(get_option('datadir'), 'gradience', 'shell'),
  exclude_files: 'meson.build',
  strip_directory : false
)


install_subdir('templates',
  install_dir: join_paths(get_option('datadir'), 'gradience', 'shell'),
  exclude_files: 'meson.build',
  strip_directory : false
)
