blueprints = custom_target('blueprints',
  input: files(
    'error_list_row.blp',
    'palette_shades.blp',
    'option_row.blp',
    'window.blp',
    'monet_theming_group.blp',
    'app_type_dialog.blp',
    'custom_css_group.blp',
    'presets_manager_window.blp',
    'reset_preset_group.blp',
    'preferences_window.blp',
    'plugin_row.blp',
    'welcome_window.blp',
    'preset_row.blp',
    'builtin_preset_row.blp',
    'explore_preset_row.blp',
    'help_overlay.blp',
    'save_dialog.blp',
    'shell_prefs_window.blp',
    'shell_theming_group.blp',
    'repo_row.blp',
    'no_plugin_window.blp',
    'share_window.blp',
    'theming_empty_group.blp',
  ),
  output: '.',
  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@']
)
