
# Install modules
gradience_modules = [
  '__init__.py',
  'custom_presets.py',
  'flatpak_overrides.py',
  'utils.py',
  'run_async.py',
  'css.py',
  'preset.py',
  'repo.py',
  'themes.py',
  'exceptions.py',
  'manager.py',
]

PY_INSTALLDIR.install_sources(gradience_modules, subdir: 'gradience/modules')

subdir('plugins')
