viewsdir = 'gradience/frontend/views'

gradience_sources = [
    '__init__.py',
    'about_window.py',
    'main_window.py',
    'no_plugin_window.py',
    'plugins_list.py',
    'preferences_window.py',
    'presets_manager_window.py',
    'share_window.py',
    'shell_prefs_window.py',
    'welcome_window.py'
]
PY_INSTALLDIR.install_sources(gradience_sources, subdir: viewsdir)
