widgetsdir = 'gradience/frontend/widgets'

gradience_sources = [
    '__init__.py',
    'builtin_preset_row.py',
    'custom_css_group.py',
    'error_list_row.py',
    'explore_preset_row.py',
    'monet_theming_group.py',
    'option_row.py',
    'palette_shades.py',
    'plugin_row.py',
    'preset_row.py',
    'repo_row.py',
    'reset_preset_group.py',
    'shell_theming_group.py',
    'theming_empty_group.py',
]
PY_INSTALLDIR.install_sources(gradience_sources, subdir: widgetsdir)
